<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:src="@drawable/splash"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/login_text_2" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="left"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_light"
            android:drawablePadding="10sp"
            android:text="N° dossier ou mot de passe incorrect."
            tools:ignore="RtlHardcoded"
            app:drawableLeftCompat="@drawable/ic_baseline_error_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username_text_field"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            app:helperTextTextColor="@color/red"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_number_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_number_input"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10sp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_field"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            app:helperTextTextColor="@color/red"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/user_password_input"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="10sp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_open_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:onClick="forgotPassword"
            android:id="@+id/login_btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:clickable="true"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/gray"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            />

        <Button
            android:elevation="5sp"
            android:id="@+id/login_btn_validate"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textAllCaps="false"
            android:text="@string/login_text_1"
            />


        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="40sp"
            android:visibility="gone"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:outlineAmbientShadowColor="@color/purple_700"
            android:outlineSpotShadowColor="@color/purple_700"/>

    </LinearLayout>
</ScrollView>