<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:src="@mipmap/auth_img"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/count_activation_text_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/gray_300"
            android:textSize="13sp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10sp"
            android:gravity="start"
            android:text="@string/activation_text_1" />

        <TextView
            android:id="@+id/activation_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="left"
            android:visibility="gone"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_light"
            android:drawablePadding="10sp"
            android:text="Le code d'activation est incorrect."
            tools:ignore="RtlHardcoded"
            app:drawableLeftCompat="@drawable/ic_baseline_signal_wifi_off_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activation_text_input_layout"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red"
            android:hint="@string/count_activation_text_2"
            app:helperText="Veuillez saisir votre code d'activation"
            app:helperTextEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/activation_input_code"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_baseline_keyboard_24"
                android:drawablePadding="10sp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_keyboard_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:elevation="2sp"
            android:id="@+id/activation_btn_validate"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textAllCaps="false"
            android:text="@string/count_activation_text_3"
            />


        <ProgressBar
            android:id="@+id/activation_progress_bar"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:outlineAmbientShadowColor="@color/purple_700"
            android:outlineSpotShadowColor="@color/purple_700"/>

    </LinearLayout>
</ScrollView>