<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:src="@mipmap/forgot_password_img"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/forgot_password_text_1" />

        <TextView
            android:id="@+id/forgot_password_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="left"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_light"
            android:drawablePadding="10sp"
            android:text="Votre email est incorrect."
            tools:ignore="RtlHardcoded"
            app:drawableLeftCompat="@drawable/ic_baseline_error_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:id="@+id/forgot_password_input_layout"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_text_2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/forgot_password_edit_text"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="10sp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:elevation="2sp"
            android:id="@+id/forgot_password_btn_validate"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textAllCaps="false"
            android:text="@string/forgot_password_text_3"
            />


        <ProgressBar
            android:id="@+id/forgot_password_progress_bar"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"/>

    </LinearLayout>
</ScrollView>