<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/setting_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Changer de mot de passe"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/edit_password_text_1" />

            <TextView
                android:id="@+id/edit_password_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:layout_gravity="left"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_light"
                android:drawablePadding="10sp"
                android:text="Votre email est incorrect."
                tools:ignore="RtlHardcoded"
                app:drawableLeftCompat="@drawable/ic_baseline_error_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:id="@+id/current_password_input_layout"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:helperTextTextColor="@color/red"
                android:hint="@string/mot_de_passe_courant"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/current_password_input"
                    android:inputType="textPassword"
                    android:drawablePadding="10sp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                app:helperTextTextColor="@color/red"
                android:layout_height="wrap_content"
                android:id="@+id/new_password_input_layout"
                android:hint="@string/nouveau_mot_de_passe"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/new_password_input"
                    android:inputType="textPassword"
                    android:drawablePadding="10sp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                app:helperTextTextColor="@color/red"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"
                android:id="@+id/conf_password_input_layout"
                android:hint="Confirmation de Mot de Passe"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/conf_password_input"
                    android:inputType="textPassword"
                    android:drawablePadding="10sp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:elevation="2sp"
                android:id="@+id/edit_password_btn_validate"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textAllCaps="false"
                android:text="@string/forgot_password_text_3"
                />


            <ProgressBar
                android:id="@+id/edit_password_progress_bar"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30sp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>